# icydb

./: .gitignore  AGENTS.md  AUDIT-FOR-TOMORROW.md  CHANGELOG.md  CODEX-TEMP.md  Cargo.toml  DESIGN.md  INSTALLING.md  INTEGRATION.md  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  REFACTOR.md  RELEASE_GUIDE.md  SECURITY.md  TEMP.md  TESTING.md  TODO.md  VERSIONING.md  dfx.json  icp.yaml  icydb.toml
canisters/minimal/: Cargo.toml  build.rs
canisters/minimal/src/: lib.rs
canisters/one_complex/: Cargo.toml  build.rs
canisters/one_complex/src/: lib.rs
canisters/quickstart/: Cargo.toml  build.rs
canisters/quickstart/src/: lib.rs  perf.rs
canisters/quickstart/src/seed/: base.rs  mod.rs  rpg.rs
canisters/sql-test/: Cargo.toml  build.rs
canisters/sql-test/src/: lib.rs
canisters/ten_simple/: Cargo.toml  build.rs
canisters/ten_simple/src/: lib.rs
crates/icydb/: Cargo.toml  README.md
crates/icydb-base/: Cargo.toml  README.md
crates/icydb-base/src/: lib.rs
crates/icydb-base/src/sanitizer/: num.rs  time.rs  web.rs
crates/icydb-base/src/types/: finance.rs  geo.rs  mod.rs  num.rs
crates/icydb-base/src/validator/: bytes.rs  collection.rs  decimal.rs  hash.rs  len.rs  num.rs  web.rs
crates/icydb-build/: Cargo.toml  README.md
crates/icydb-build/src/: db.rs  lib.rs  macros.rs  metrics.rs  query.rs
crates/icydb-build/src/db/: mod.rs  schema.rs  sql.rs  store.rs
crates/icydb-cli/: Cargo.toml
crates/icydb-cli/src/: config.rs  diagnostic.rs  main.rs  observability.rs  table.rs
crates/icydb-cli/src/cli/: canister.rs  config.rs  diagnostic.rs  metrics.rs  mod.rs  schema.rs  sql.rs  target.rs
crates/icydb-cli/src/commands/: mod.rs
crates/icydb-cli/src/config/: init.rs  report.rs  resolution.rs  surface.rs
crates/icydb-cli/src/dfx/: commands.rs  mod.rs  process.rs  project.rs
crates/icydb-cli/src/icp/: call.rs  commands.rs  mod.rs  process.rs  project.rs
crates/icydb-cli/src/observability/: metrics.rs  mod.rs  render.rs  schema.rs  schema_check.rs  snapshot.rs
crates/icydb-cli/src/shell/: call.rs  input.rs  interactive.rs  mod.rs  render.rs  route.rs
crates/icydb-cli/src/tests/: cli.rs  config.rs  icp.rs  mod.rs  observability.rs  shell.rs
crates/icydb-config-build/: Cargo.toml
crates/icydb-config-build/src/: emit.rs  error.rs  lib.rs  model.rs  parse.rs  resolve.rs  tests.rs
crates/icydb-core/: Cargo.toml  README.md
crates/icydb-core/benches/: blob.rs
crates/icydb-core/src/: entity.rs  error.rs  hash.rs  index.rs  key.rs  lib.rs  macros.rs  runtime.rs  runtime_error.rs  sanitize.rs  scalar_registry.rs  serialize.rs  test_fixtures.rs  validate.rs  view.rs
crates/icydb-core/src/db/: catalog.rs  codec.rs  commit.rs  consistency.rs  cursor.rs  (+20 more)
crates/icydb-core/tests/: compile.rs  compile_fail.rs  compile_pass.rs  write_boundary_guards.rs
crates/icydb-derive/: Cargo.toml  README.md
crates/icydb-derive/src/: display.rs  field_projection.rs  field_values.rs  inner.rs  lib.rs  newtype.rs  ops.rs  partial_eq.rs  partial_ord.rs  persisted_row.rs  util.rs
crates/icydb-diagnostic-code/: Cargo.toml
crates/icydb-diagnostic-code/src/: lib.rs  registry.rs
crates/icydb-macros/: Cargo.toml  README.md
crates/icydb-macros/src/: helper.rs  lib.rs  trait_kind.rs
crates/icydb-model-legacy/: Cargo.toml  README.md
crates/icydb-model-legacy/src/: types.rs  visit.rs
crates/icydb-paths/: Cargo.toml  README.md
crates/icydb-paths/src/: lib.rs
crates/icydb-schema/: Cargo.toml  README.md
crates/icydb-schema-derive/: Cargo.toml  README.md
crates/icydb-schema-derive/src/: helper.rs  lib.rs  trait_kind.rs  types.rs
crates/icydb-schema-derive/tests/: compile_fail.rs
crates/icydb-schema-tests/: Cargo.toml  README.md  build.rs
crates/icydb-schema-tests/src/: lib.rs  schema.rs
crates/icydb-schema/src/: account.rs  atom.rs  bounds.rs  codec.rs  date.rs  error.rs  expression.rs  fragment.rs  int_big.rs  key.rs  lib.rs  nat_big.rs  numeric_value.rs  proposal.rs  scalar.rs  scalar_macros.rs  scalar_registry.rs  subaccount.rs  tests.rs  time_atoms.rs  types.rs  unit.rs  visit.rs
crates/icydb-types/: Cargo.toml
crates/icydb-types/src/: lib.rs
crates/icydb-utils/: Cargo.toml
crates/icydb-utils/src/: hash.rs  lib.rs  rand.rs
crates/icydb/src/: error.rs  lib.rs  patch.rs  traits.rs
crates/icydb/tests/: compile.rs
crates/test/: Cargo.toml  build.rs
crates/test/src/: db.rs  delete_unique.rs  index.rs  lib.rs  load_executor.rs  merge.rs  metrics.rs  ops.rs  query_planner.rs  upsert.rs  view_into.rs
schema/quickstart/: Cargo.toml
schema/test/: Cargo.toml
schema/test/fixtures/: Cargo.toml
schema/test/sql/: Cargo.toml
schema/test/sql_parity/: Cargo.toml
schema/test/src/: lib.rs  schema.rs
schema/twenty/: Cargo.toml
schema/twenty/src/: lib.rs  twenty.rs
testing/ic-testkit/: Cargo.toml
testing/ic-testkit/src/: lib.rs
testing/ic-testkit/tests/: fluent_perf_audit.rs  sql_canister.rs  sql_perf_audit.rs
testing/integration/: Cargo.toml
testing/integration/src/: lib.rs  sql_performance_contract.rs
testing/integration/tests/: fluent_perf_audit.rs  pk_canonicalization_focused_artifact.rs  sql_canister.rs  sql_correctness.rs  sql_perf_audit.rs  sql_perf_baseline.rs  sql_perf_calibration.rs  sql_perf_environment.rs  sql_perf_instrumentation.rs  sql_perf_matrix_audit.rs  sql_perf_measurement.rs  sql_perf_p1_shard.rs  sql_perf_p2.rs  sql_perf_p2_confirmation.rs  sql_perf_p2_shard.rs  sql_perf_phase.rs  sql_perf_profile.rs  sql_perf_receipt.rs  sql_perf_regression_sentinels.rs  sql_perf_scale.rs  sql_perf_scale_baseline.rs  sql_perf_scale_shard.rs
testing/pocket-ic/: Cargo.toml
testing/pocket-ic/src/: lib.rs
testing/pocket-ic/tests/: fluent_perf_audit.rs  sql_canister.rs  sql_perf_audit.rs
testing/sql-generator/: Cargo.toml
testing/sql-generator/corpus/: README.md  select.filtered-global-count-residual-scan.json
testing/sql-generator/src/: corpus.rs  corpus_inventory.rs  coverage.rs  error.rs  failure.rs  fixture.rs  generator.rs  lib.rs  model.rs  replay.rs  rng.rs  scheduled.rs  shard.rs  shrink.rs  tests.rs
(+5371 files in other folders)
