[workspace]
members = [
    "crates/icydb",
    "crates/icydb-build",
    "crates/icydb-core",
    "crates/icydb-derive",
    "crates/icydb-primitives",
    "crates/icydb-schema",
    "crates/icydb-schema-derive",
    # Test-only crates
    "crates/icydb-schema-tests",
]
resolver = "2"

[workspace.package]
rust-version = "1.93.1"
edition = "2024"
version = "0.12.0"
authors = ["borovan <84897664+borovan@users.noreply.github.com>"]
description = "IcyDB — A type-safe, embedded ORM and schema system for the Internet Computer"
categories = ["database", "web-programming", "wasm"]
license = "Apache-2.0 OR MIT"
repository = "https://github.com/dragginzgame/icydb"

[workspace.dependencies]
bencher = "0.1.5"
candid = "0.10"
canic-cdk = "0.9.23"
canic-memory = "0.9.23"
canic-utils = "0.9.23"
chrono = { version = "0.4", default-features = false }
ctor = "0.6"
darling = "0.23"
derive_more = { version = "2.0", default-features = false, features = ["full"] }
ic-cdk = "0.19.0"
icydb = { path = "crates/icydb", version = "0.12.0" }
icydb-build = { path = "crates/icydb-build", version = "0.12.0" }
icydb-core = { path = "crates/icydb-core", version = "0.12.0" }
icydb-derive = { path = "crates/icydb-derive", version = "0.12.0" }
icydb-primitives = { path = "crates/icydb-primitives", version = "0.12.0" }
icydb-schema = { path = "crates/icydb-schema", version = "0.12.0" }
icydb-schema-derive = { path = "crates/icydb-schema-derive", version = "0.12.0" }
# Test harnesses
icydb-schema-tests = { path = "crates/icydb-schema-tests" }
num-traits = { version = "0.2", default-features = false }
proc-macro2 = "1.0"
proptest = "1.9.0"
quote = "1.0"
remain = "0.2"
rust_decimal = { version = "1.37", default-features = false, features = [
    "serde",
    "maths",
] }
serde = { version = "1.0", default-features = false }
serde_bytes = "0.11"
serde_cbor = "0.11"
serde_json = "1.0"
sha2 = "0.10"
syn = "2.0"
thiserror = "2.0"
trybuild = "1.0"
# removed std because it imports rand; serde feature doesn't compile with std
ulid = { version = "1.2", default-features = false }

# ---------------------
#  CLIPPY CONFIGURATION
# ---------------------
[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

missing_const_for_fn = "warn"
must_use_candidate = "warn"
redundant_clone = "warn"
semicolon_if_nothing_returned = "warn"
uninlined_format_args = "warn"
unnecessary_cast = "warn"
use_self = "warn"

doc_markdown = "allow"
empty_line_after_doc_comments = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_inception = "allow"
module_name_repetitions = "allow"
needless_pass_by_value = "allow"
option_if_let_else = "allow"
redundant_pub_crate = "allow"
significant_drop_tightening = "allow"
wildcard_imports = "allow"

# ---------------------
#  PATCH SECTION
# ---------------------
# Only needed if you override crates.io during dev.
[patch.crates-io]
icydb = { path = "crates/icydb" }
icydb-core = { path = "crates/icydb-core" }
icydb-derive = { path = "crates/icydb-derive" }
icydb-primitives = { path = "crates/icydb-primitives" }
icydb-schema-derive = { path = "crates/icydb-schema-derive" }
icydb-schema = { path = "crates/icydb-schema" }
icydb-build = { path = "crates/icydb-build" }

# ---------------------
#  DEV PROFILE
# ---------------------
[profile.dev]
opt-level = 1
lto = false
codegen-units = 16
strip = "debuginfo"
debug = false
overflow-checks = true
