[workspace]
members = [
    "canisters/audit/minimal",
    "canisters/audit/one_complex",
    "canisters/audit/one_simple",
    "canisters/audit/sql_perf",
    "canisters/audit/ten_complex",
    "canisters/audit/ten_simple",
    "canisters/demo/rpg",
    "canisters/test/sql",
    "crates/icydb",
    "crates/icydb-build",
    "crates/icydb-cli",
    "crates/icydb-core",
    "crates/icydb-derive",
    "crates/icydb-primitives",
    "crates/icydb-schema",
    "crates/icydb-schema-derive",
    "crates/icydb-utils",
    "schema/audit/minimal",
    "schema/audit/one_complex",
    "schema/audit/one_simple",
    "schema/audit/sql_perf",
    "schema/audit/ten_complex",
    "schema/audit/ten_simple",
    "schema/demo/rpg",
    "schema/test/fixtures",
    "schema/test/sql",
    "testing/macro-tests",
    "testing/pocket-ic",
    "testing/wasm-helpers",
]
resolver = "2"

[workspace.package]
rust-version = "1.91.0"
edition = "2024"
version = "0.126.3"
authors = ["borovan <84897664+borovan@users.noreply.github.com>"]
description = "IcyDB — A schema-first typed query engine and persistence runtime for Internet Computer canisters"
categories = ["database", "web-programming", "wasm"]
license = "Apache-2.0 OR MIT"
repository = "https://github.com/dragginzgame/icydb"

[workspace.dependencies]
candid = "0.10"
canic-cdk = "0.27.12"
canic-memory = "0.27.12"
canic-testkit = "0.27.12"
convert_case = "0.11"
ctor = "0.8.0"
darling = "0.23"
derive_more = { version = "2.0", default-features = false, features = [
    "add",
    "add_assign",
    "deref",
    "deref_mut",
    "into_iterator",
    "sum",
] }
icydb = { path = "crates/icydb", version = "0.126.3" }
icydb-build = { path = "crates/icydb-build", version = "0.126.3" }
icydb-core = { path = "crates/icydb-core", version = "0.126.3" }
icydb-derive = { path = "crates/icydb-derive", version = "0.126.3" }
icydb-primitives = { path = "crates/icydb-primitives", version = "0.126.3" }
icydb-schema = { path = "crates/icydb-schema", version = "0.126.3" }
icydb-schema-derive = { path = "crates/icydb-schema-derive", version = "0.126.3" }
icydb-testing-audit-minimal-fixtures = { path = "schema/audit/minimal" }
icydb-testing-audit-one-complex-fixtures = { path = "schema/audit/one_complex" }
icydb-testing-audit-one-simple-fixtures = { path = "schema/audit/one_simple" }
icydb-testing-audit-sql-perf-fixtures = { path = "schema/audit/sql_perf" }
icydb-testing-audit-ten-complex-fixtures = { path = "schema/audit/ten_complex" }
icydb-testing-audit-ten-simple-fixtures = { path = "schema/audit/ten_simple" }
icydb-testing-demo-rpg-fixtures = { path = "schema/demo/rpg" }
icydb-testing-test-fixtures = { path = "schema/test/fixtures" }
icydb-testing-test-sql-fixtures = { path = "schema/test/sql" }
icydb-testing-wasm-helpers = { path = "testing/wasm-helpers" }
icydb-utils = { path = "crates/icydb-utils", version = "0.126.3" }
num-bigint = "0.4"
proc-macro2 = "1.0"
proptest = "1.9.0"
quote = "1.0"
rand_chacha = "0.10"
remain = "0.2"
rustyline = "18.0"
serde = { version = "1.0", default-features = false }
serde_bytes = "0.11"
serde_json = "1.0"
# Keep sha2 aligned with the canister runtime stack to avoid duplicate 0.10/0.11
# digest trees in wasm builds.
sha2 = "0.10.9"
syn = "2.0"
thiserror = "2.0"
time = { version = "0.3", default-features = false, features = [
    "formatting",
    "parsing",
] }
trybuild = "1.0"
# removed std because it imports rand; serde feature doesn't compile with std
ulid = { version = "1.2", default-features = false }
xxhash-rust = { version = "0.8.15", default-features = false, features = [
    "xxh3",
] }

# ---------------------
#  CLIPPY CONFIGURATION
# ---------------------
[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

missing_const_for_fn = "warn"
must_use_candidate = "warn"
redundant_clone = "warn"
semicolon_if_nothing_returned = "warn"
uninlined_format_args = "warn"
unnecessary_cast = "warn"
use_self = "warn"

doc_markdown = "allow"
empty_line_after_doc_comments = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_inception = "allow"
module_name_repetitions = "allow"
needless_pass_by_value = "allow"
option_if_let_else = "allow"
redundant_pub_crate = "allow"
significant_drop_tightening = "allow"
wildcard_imports = "allow"

# ---------------------
#  PATCH SECTION
# ---------------------
# Only needed if you override crates.io during dev.
[patch.crates-io]
icydb = { path = "crates/icydb" }
icydb-core = { path = "crates/icydb-core" }
icydb-derive = { path = "crates/icydb-derive" }
icydb-primitives = { path = "crates/icydb-primitives" }
icydb-schema-derive = { path = "crates/icydb-schema-derive" }
icydb-schema = { path = "crates/icydb-schema" }
icydb-build = { path = "crates/icydb-build" }
icydb-utils = { path = "crates/icydb-utils" }

# ---------------------
#  DEV PROFILE
# ---------------------
[profile.dev]
opt-level = 1
lto = false
codegen-units = 16
strip = "debuginfo"
debug = false
overflow-checks = true

# -------------------------
#  RELEASE / WASM PROFILES
# -------------------------
[profile.release]
strip = "symbols"

[profile.wasm-release]
inherits = "release"
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"
