[workspace]
members = [
    "canisters/audit/default_empty",
    "canisters/audit/default_empty_metrics",
    "canisters/audit/one_entity_fluent_execute",
    "canisters/audit/one_entity_fluent_rows",
    "canisters/audit/one_entity_sql_query",
    "canisters/audit/sql_perf",
    "canisters/audit/ten_entity_fluent_rows",
    "canisters/demo/rpg",
    "canisters/test/sql",
    "canisters/test/sql_bounded",
    "crates/icydb",
    "crates/icydb-build",
    "crates/icydb-cli",
    "crates/icydb-config",
    "crates/icydb-core",
    "crates/icydb-derive",
    "crates/icydb-diagnostic-code",
    "crates/icydb-primitives",
    "crates/icydb-schema",
    "crates/icydb-schema-derive",
    "crates/icydb-utils",
    "schema/audit/default_empty",
    "schema/audit/one_simple",
    "schema/audit/sql_perf",
    "schema/audit/ten_simple",
    "schema/demo/rpg",
    "schema/test/fixtures",
    "schema/test/sql",
    "testing/integration",
    "testing/macro-tests",
    "testing/sql-generator",
    "testing/sqlite-reference",
    "testing/wasm-helpers",
]
resolver = "2"

[workspace.package]
rust-version = "1.96.0"
edition = "2024"
version = "0.204.5"
authors = ["borovan <84897664+borovan@users.noreply.github.com>"]
description = "IcyDB — A schema-first typed query engine and persistence runtime for Internet Computer canisters"
categories = ["database", "web-programming", "wasm"]
license = "Apache-2.0 OR MIT"
repository = "https://github.com/dragginzgame/icydb"

[workspace.dependencies]
blake3 = "1.8.5"
candid = "0.10"
clap = { version = "4.6.1", default-features = false, features = [
    "derive",
    "env",
    "error-context",
    "help",
    "std",
    "usage",
] }
convert_case = "0.11"
ctor = "1.0.0"
darling = "0.23"
derive_more = { version = "2.0", default-features = false, features = [
    "add",
    "add_assign",
    "deref",
    "deref_mut",
    "into_iterator",
    "sum",
] }
getrandom = "0.4"
ic-cdk = "0.20.1"
ic-memory = "0.11.1"
ic-stable-structures = "0.7.2"
ic-testkit = "0.1.10"
icrc-ledger-types = "0.2.0"
icydb = { path = "crates/icydb", version = "0.204.5" }
icydb-build = { path = "crates/icydb-build", version = "0.204.5" }
icydb-config = { path = "crates/icydb-config", version = "0.204.5" }
icydb-core = { path = "crates/icydb-core", version = "0.204.5" }
icydb-derive = { path = "crates/icydb-derive", version = "0.204.5" }
icydb-diagnostic-code = { path = "crates/icydb-diagnostic-code", version = "0.204.5" }
icydb-primitives = { path = "crates/icydb-primitives", version = "0.204.5" }
icydb-schema = { path = "crates/icydb-schema", version = "0.204.5" }
icydb-schema-derive = { path = "crates/icydb-schema-derive", version = "0.204.5" }
icydb-testing-audit-default-empty-fixtures = { path = "schema/audit/default_empty" }
icydb-testing-audit-one-simple-fixtures = { path = "schema/audit/one_simple" }
icydb-testing-audit-sql-perf-fixtures = { path = "schema/audit/sql_perf" }
icydb-testing-audit-ten-simple-fixtures = { path = "schema/audit/ten_simple" }
icydb-testing-demo-rpg-fixtures = { path = "schema/demo/rpg" }
icydb-testing-sql-generator = { path = "testing/sql-generator" }
icydb-testing-sqlite-reference = { path = "testing/sqlite-reference" }
icydb-testing-test-fixtures = { path = "schema/test/fixtures" }
icydb-testing-test-sql-fixtures = { path = "schema/test/sql" }
icydb-testing-wasm-helpers = { path = "testing/wasm-helpers" }
icydb-utils = { path = "crates/icydb-utils", version = "0.204.5" }
num-bigint = "0.4"
proc-macro2 = "1.0"
proptest = "1.9.0"
quote = "1.0"
rand_chacha = "0.10"
remain = "0.2"
rusqlite = { version = "=0.40.1", default-features = false, features = [
    "bundled",
    "functions",
    "load_extension",
] }
rustyline = "18.0"
serde = { version = "1.0", default-features = false }
serde_bytes = "0.11"
serde_json = "1.0"
# Keep sha2 aligned with the canister runtime stack to avoid duplicate 0.10/0.11
# digest trees in wasm builds.
sha2 = "0.10.9"
syn = "2.0"
thiserror = "2.0"
# Temporary resolver guard for ic-agent 0.47.3 under rustc 1.96:
# time 0.3.48 trips E0119 in ic-agent's nonce timestamp path.
time = { version = "=0.3.47", default-features = false }
trybuild = "1.0"
# Keep std disabled because IcyDB owns runtime randomness and monotonic generation.
ulid = { version = "2.0.1", default-features = false }
xxhash-rust = { version = "0.8.15", default-features = false, features = [
    "xxh3",
] }

# ---------------------
#  CLIPPY CONFIGURATION
# ---------------------
[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

missing_const_for_fn = "warn"
missing_panics_doc = "warn"
must_use_candidate = "warn"
redundant_clone = "warn"
semicolon_if_nothing_returned = "warn"
uninlined_format_args = "warn"
unnecessary_cast = "warn"
use_self = "warn"

doc_markdown = "allow"
empty_line_after_doc_comments = "allow"
missing_errors_doc = "allow"
module_inception = "allow"
module_name_repetitions = "allow"
needless_pass_by_value = "allow"
option_if_let_else = "allow"
redundant_pub_crate = "allow"
wildcard_imports = "allow"

# ---------------------
#  PATCH SECTION
# ---------------------
# Only needed if you override crates.io during dev.
[patch.crates-io]
icydb = { path = "crates/icydb" }
icydb-core = { path = "crates/icydb-core" }
icydb-diagnostic-code = { path = "crates/icydb-diagnostic-code" }
icydb-derive = { path = "crates/icydb-derive" }
icydb-primitives = { path = "crates/icydb-primitives" }
icydb-schema-derive = { path = "crates/icydb-schema-derive" }
icydb-schema = { path = "crates/icydb-schema" }
icydb-build = { path = "crates/icydb-build" }
icydb-config = { path = "crates/icydb-config" }
icydb-utils = { path = "crates/icydb-utils" }

# ---------------------
#  DEV PROFILE
# ---------------------
[profile.dev]
opt-level = 1
lto = false
codegen-units = 16
strip = "debuginfo"
debug = false
overflow-checks = true

# -------------------------
#  RELEASE / WASM PROFILES
# -------------------------
[profile.release]
strip = "symbols"

[profile.wasm-release]
inherits = "release"
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"
