[package]
name = "canister_quickstart"
edition = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }
publish = false

[lib]
crate-type = ["cdylib"]

[features]
default = ["sql"]
sql = ["icydb/sql"]

[dependencies]
candid = { workspace = true }
ic-cdk = { workspace = true }
icydb = { path = "../../crates/icydb", default-features = false }
icydb-testing-quickstart-fixtures = { workspace = true }

[build-dependencies]
icydb = { path = "../../crates/icydb", default-features = false }
icydb-testing-quickstart-fixtures = { workspace = true }

[lints]
workspace = true
