[package]
name = "icydb-base"
edition = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }
license = { workspace = true }
description = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }

[lib]
doctest = false

[dependencies]
candid = { workspace = true }
canic-utils = { workspace = true }
icydb-core = { workspace = true }
icydb-error = { workspace = true }
icydb-schema = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
bencher = "0.1"
serde_json = "1.0"

[lints]
workspace = true

[[bench]]
name = "all"
path = "benches/all.rs"
harness = false
