[package]
name = "icydb-cli"
edition = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }
license = { workspace = true }
description = "Developer CLI tools for IcyDB"
repository = { workspace = true }
authors = { workspace = true }

[dependencies]
icydb = { workspace = true, features = ["sql"] }
rustyline = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
