[package]
name = "icydb-cli"
edition = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }
license = { workspace = true }
description = "Developer CLI tools for IcyDB"
repository = { workspace = true }
authors = { workspace = true }

[[bin]]
name = "icydb"
path = "src/main.rs"

[dependencies]
candid = { workspace = true }
clap = { version = "4.6.1", default-features = false, features = ["derive", "env", "error-context", "help", "std", "usage"] }
icydb = { workspace = true }
rustyline = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

[lints]
workspace = true
