[package]
name = "icydb-core"
edition = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }
license = { workspace = true }
description = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }

[lib]
doctest = false

[dependencies]
candid = { workspace = true }
canic-cdk = { workspace = true }
canic-memory = { workspace = true }
canic-utils = { workspace = true }
derive_more = { workspace = true }
icydb-primitives = { workspace = true }
num-traits = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
serde_cbor = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
ulid = { workspace = true }

[dev-dependencies]
icydb-derive = { workspace = true }
icydb-schema-derive = { workspace = true }
proptest = { workspace = true }
trybuild = { workspace = true }

[lints]
workspace = true
