[package]
name = "icydb-diagnostic-code"
edition = { workspace = true }
rust-version = "1.88.0"
version = { workspace = true }
license = { workspace = true }
description = "Compact diagnostic codes for IcyDB"
repository = { workspace = true }
authors = { workspace = true }

[lints]
workspace = true
