[package]
name = "icydb-macros"
edition = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }
license = { workspace = true }
description = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }

[lib]
proc-macro = true

[dependencies]
darling = { workspace = true }
derive_more = { workspace = true }
icydb-schema = { workspace = true }
icydb-error = { workspace = true }
icydb-paths = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
canic-utils = { workspace = true }
remain = { workspace = true }
serde = { workspace = true }
syn = { workspace = true }

[lints]
workspace = true
