[package]
name = "icydb-model-legacy"
edition = { workspace = true }
rust-version = "1.88.0"
version = { workspace = true }
publish = false
license = { workspace = true }
description = "Temporary unpublished IcyDB model-authoring extraction"
repository = { workspace = true }
authors = { workspace = true }

[dependencies]
candid = { workspace = true }
darling = { workspace = true }
icydb-schema = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
remain = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
