[package]
name = "icydb-schema-derive"
edition = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }
license = { workspace = true }
description = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }

[lib]
proc-macro = true

[dependencies]
canic-utils = { workspace = true }
darling = { workspace = true }
derive_more = { workspace = true }
icydb-schema = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
remain = { workspace = true }
serde = { workspace = true }
syn = { workspace = true }

[dev-dependencies]
candid = { workspace = true }
trybuild = { workspace = true }

[lints]
workspace = true
