[package]
name = "icydb-schema-tests"
edition = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }
publish = false
license = { workspace = true }
description = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }

[dependencies]
candid = { workspace = true }
icydb = { workspace = true }
serde = { workspace = true }

[build-dependencies]
canic-cdk = { workspace = true }
canic-utils = { workspace = true }
icydb = { workspace = true }
icydb-build = { workspace = true }

[lints]
workspace = true
