[package]
name = "icydb-schema-tests"
edition = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }
publish = false
license = { workspace = true }
description = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }

[dependencies]
candid = { workspace = true }
icydb = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
trybuild = { workspace = true }

[lints]
workspace = true
