[package]
name = "icydb-schema"
edition = { workspace = true }
rust-version = "1.88.0"
version = { workspace = true }
license = { workspace = true }
description = "Bounded public schema proposal contract for IcyDB"
repository = { workspace = true }
authors = { workspace = true }

[dependencies]
candid = { workspace = true }
derive_more = { workspace = true }
icrc-ledger-types = { workspace = true }
num-bigint = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
ulid = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
