[package]
name = "icydb-types"
edition = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }
license = { workspace = true }
description = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }

[lib]
doctest = false

[dependencies]
icydb-core = { workspace = true }

[lints]
workspace = true
