[package]
name = "icydb-utils"
edition = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }
license = { workspace = true }
description = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }

[dependencies]
convert_case = { workspace = true }
rand_chacha = { workspace = true }
thiserror = { workspace = true }
xxhash-rust = { workspace = true }

[lints]
workspace = true
