[package]
name = "icydb"
edition = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }
license = { workspace = true }
description = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }

[features]
default = ["sql"]
sql = ["icydb-core/sql"]
perf-attribution = ["icydb-core/perf-attribution"]
structural-read-metrics = ["icydb-core/structural-read-metrics"]
sql-shell = ["dep:rustyline", "dep:serde_json"]

[dependencies]
candid = { workspace = true }
canic-cdk = { workspace = true }
canic-memory = { workspace = true }
ctor = { workspace = true }
derive_more = { workspace = true }
icydb-build = { workspace = true }
icydb-core = { path = "../icydb-core", version = "0.78.2", default-features = false }
icydb-derive = { workspace = true }
icydb-schema = { workspace = true }
icydb-schema-derive = { workspace = true }
icydb-utils = { workspace = true }
remain = { workspace = true }
rustyline = { version = "15.0", optional = true }
serde = { workspace = true }
serde_json = { workspace = true, optional = true }
thiserror = { workspace = true }

[dev-dependencies]
serde_cbor = { workspace = true }

[[bin]]
name = "sql_shell"
path = "src/bin/sql_shell.rs"
required-features = ["sql-shell"]

[lints]
workspace = true
