[package]
name = "icydb"
edition = { workspace = true }
rust-version = "1.88.0"
version = { workspace = true }
license = { workspace = true }
description = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }

[features]
default = []
sql = ["icydb-core/sql"]
diagnostics = ["icydb-core/diagnostics"]

[dependencies]
candid = { workspace = true }
ctor = { workspace = true }
derive_more = { workspace = true }
ic-cdk = { workspace = true }
ic-memory = { workspace = true }
icydb-build = { workspace = true }
icydb-core = { workspace = true }
icydb-derive = { workspace = true }
icydb-diagnostic-code = { workspace = true }
icydb-schema = { workspace = true }
icydb-schema-derive = { workspace = true }
icydb-utils = { workspace = true }
remain = { workspace = true }
serde = { workspace = true }

[lints]
workspace = true
