[package]
name = "icydb"
edition = { workspace = true }
rust-version = "1.88.0"
version = { workspace = true }
license = { workspace = true }
description = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }

[features]
default = []
sql = ["icydb-core/sql"]
sql-explain = ["sql", "icydb-core/sql-explain"]
diagnostics = ["icydb-core/diagnostics"]

[dependencies]
candid = { workspace = true }
ctor = { workspace = true }
derive_more = { workspace = true }
ic-cdk = { workspace = true }
ic-memory = { workspace = true }
icydb-core = { workspace = true }
icydb-derive = { workspace = true }
icydb-diagnostic-code = { workspace = true }
icydb-model-legacy = { workspace = true }
icydb-schema = { workspace = true }
icydb-schema-derive = { workspace = true }
icydb-utils = { workspace = true }
remain = { workspace = true }
serde = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
icydb-build = { workspace = true }
icydb-config = { workspace = true }

[dev-dependencies]
trybuild = { workspace = true }

[lints]
workspace = true
