[package]
name = "test"
edition = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }
publish = false
license = { workspace = true }
description = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = { workspace = true }
canic-core = { workspace = true }
ic-cdk = { workspace = true }
icydb = { workspace = true }
test_design = { workspace = true }

[build-dependencies]
canic-core = { workspace = true }
icydb = { workspace = true }
icydb-build = { workspace = true }
test_design = { workspace = true }

[lints]
workspace = true
