[package]
name = "icydb-testing-quickstart-fixtures"
edition = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }
publish = false
license = { workspace = true }
description = "Quickstart schema fixtures for the quickstart canister"
repository = { workspace = true }
authors = { workspace = true }

[dependencies]
candid = { workspace = true }
icydb = { workspace = true }
serde = { workspace = true }

[lints]
workspace = true
