[package]
name = "icydb-testing-fixtures"
edition = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }
publish = false
license = { workspace = true }
description = "Shared schema and seed fixtures for IcyDB testing surfaces"
repository = { workspace = true }
authors = { workspace = true }

[dependencies]
candid = { workspace = true }
icydb = { workspace = true }
serde = { workspace = true }

[lints]
workspace = true
