[package]
name = "icydb-testing-twenty-fixtures"
edition = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }
publish = false
license = { workspace = true }
description = "Twenty-entity schema fixture crate for wasm SQL footprint auditing"
repository = { workspace = true }
authors = { workspace = true }

[dependencies]
candid = { workspace = true }
icydb = { workspace = true }
serde = { workspace = true }

[lints]
workspace = true
